--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,6 @@
 
 name: Java CI with Maven
 
-permissions: write all
 
 on:
   push:
@@ -18,6 +17,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
     - uses: actions/checkout@v4
